# WLED-Scheduler

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL_PI.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 28a7e238df0c_add_mdns_name_to_devices.py  3a7f91c0d824_add_description_to_schedules.py  40cc2a1822a0_add_room_field_to_devices.py  42e5ebeca1ff_add_schedule_date_range.py  a3f5c8d1e6b2_add_preset_to_schedule_devices.py  bf72ce13d420_add_icon_to_devices_and_schedules.py  c9d3e1f2a4b8_add_repeat_annually.py  d4e7f1a2b3c9_add_powered_on_to_devices.py  e52f713d398e_initial_schema.py  f98c3f249b98_schedule_device_many_to_many.py  f98f29b0e74d_add_skipped_status_to_scheduleexecution.py  fd6f4f791489_harden_action_type_and_schedule_trigger_.py
app/: config.py  database.py  device_health.py  lucide_icons.json  main.py  mdns.py  models.py  scheduler.py  scheduling.py  schemas.py  sun.py  validation.py  view_helpers.py  wled_client.py
app/routers/: actions.py  devices.py  history.py  pages.py  (+3 more)
pi/: apply_update.sh  install.sh  migrate.sh  restore.sh  run.sh  wled-scheduler-update.path  wled-scheduler-update.service  wled-scheduler.service
scripts/: backup_db.py  generate-icons.js  package.json
tests/: conftest.py  test_actions.py  test_database.py  test_device_health.py  test_devices.py  test_history.py  test_mdns.py  test_models.py  test_scheduler.py  test_schedules.py  test_scheduling.py  test_schemas.py  test_settings.py  test_validation.py
(+28 files in other folders)
